--- a/docu.tex
+++ b/docu.tex
@@ -25,6 +25,7 @@
 
 
 
+
 \clearpage
 % Literaturverzeichnis
 \nocite{*}          % Alle Literaturverzeichniseinträge ausgeben
@@ -39,7 +40,7 @@
 
 \section{Papers}
 \label{sec:paper_ble}
-\includepdf{extras/paper_jonas.pdf}
+%\includepdf{extras/paper_jonas.pdf}
 
 
 \end{document}
