--- a/includes/sensor.tex
+++ b/includes/sensor.tex
@@ -232,3 +232,5 @@ Mit dem jetzigen Stand kann man verlässlich die Feuchtigkeit in der Windel dete
 Eines der größeren Probleme ist mit Sicherheit das Metallgarn. Hier lässt sich der Sensor optimieren indem man einen vollständig elektrisch isolierten Leiter findet. Ebenfalls lässt sich die Verarbeitungsmöglichkeit des Metallgarns noch verbessern oder geeignete Löt- oder Klebeverfahren finden.
 
 Nichtsdestrotz machen die Sensoren genau das was wir uns am Anfang des Projekts als Ziel gesetzt haben. Die Sensoren detektieren Feuchtigkeit und Wärmeanstieg verlässlich und lassen sich in die Windel integrieren. 
+
+\pagebreak
