--- a/docu.tex
+++ b/docu.tex
@@ -22,7 +22,7 @@
 \input{includes/sensor}
 \input{includes/eval_system}
 \input{includes/kommunikation}
-
+\input{includes/verhaltensformular}
 
 
 
