--- a/includes/evalsys/software.tex
+++ b/includes/evalsys/software.tex
@@ -1,9 +1,10 @@
-\subsection{Komponenten}
+\subsection{Softwarekomponenten}
 \label{subsec:evalsys_software}
 
-Die Software beinhaltet mehrere Teilbereiche von dem Erkennen eines Triggers bis zur Ablage des vollständigen Videos.
+Die Software beinhaltet mehrere Teilbereiche. Zum Einen muss die Kamera angesteuert werden, sodass das Video ständig abgespeichert werden kann. Dies soll anhand einer Tiggererkennung ausgelöst werden. Als Beispiel wird eine Wildüberwachungskamera mit Bewegungssensor herangezogen \cite{rasp_ansteuerung}.
 
 \subsubsection{Videoaufnahme}
+
 
 \subsubsection{Triggererkennung}
 
