--- a/literaturquellen.bib
+++ b/literaturquellen.bib
@@ -22,3 +22,8 @@
   year    = "2017"  
 }
   
+@online{rasp_ansteuerung,
+  author = "Helmut Karger",
+  title = "Raspberry Video Kamera",
+  url = "http://blog.helmutkarger.de",
+}
