--- a/includes/evalsys/software.tex
+++ b/includes/evalsys/software.tex
@@ -1,7 +1,7 @@
 \subsection{Software Komponenten} \
 \label{subsec:evalsys_software}
 
-Die Software beinhaltet mehrere Teilbereiche von dem Erkennen eines Triggers bis zur Ablage des vollständigen Videos. Durch recherche über Wildbewegungskameras konnten einige Bereiche der Videoaufnahme erleichtert werden \todo{Referenz auf Internetseite von Programmcode}.
+Die Software beinhaltet mehrere Teilbereiche von dem Erkennen eines Triggers bis zur Ablage des vollständigen Videos. Durch recherche über Wildbewegungskameras konnten einige Bereiche der Videoaufnahme erleichtert werden \cite{rasp_ansteuerung}.
 
 \subsubsection{Videoaufnahme}
 
@@ -63,7 +63,7 @@ Hiermit ist das bisherige Videomaterial vor dem Trigger gesammelt und die Trigge
 
 Da das "`h264"'-Format für die Anzeige auf einer Webapplikation nicht geeignet ist, muss diese in ein anderes Format umgewandelt werden. Dies passiert über ein weiteres Python-Programm, welches über einen Systembefehl angesteuert wird.
 
-Mittels eines Systembefehle und dem Programm "`MP4Box"' können die Videoabschnitte konvertiert, zusammengefügt und in das Zielverzeichnis der Webapplikation verschoben werden \todo{Referenz auf Internetseite}. Zuletzt werden die zwei nicht mehr benötigten Teilabschnitte gelöscht.
+Mittels eines Systembefehle und dem Programm "`MP4Box"' können die Videoabschnitte konvertiert, zusammengefügt und in das Zielverzeichnis der Webapplikation verschoben werden \cite{convert_video}. Zuletzt werden die zwei nicht mehr benötigten Teilabschnitte gelöscht.
 
 \subsubsection{Konfigurationsdatei}
 
