Updated Kom teil

--- a/includes/evalsys/software.tex
+++ b/includes/evalsys/software.tex
@@ -31,6 +31,7 @@ Im obigen Code wird die Bilderanzahl pro Sekunde eingestellt. Danach wird ein Ri
 Danach werden Triggersuche sowie Videoverarbeitung im Zyklus von einer Sekunde der durchlaufen. Die Wartezeit wird mittels der Aufnahme- und Warten-Funktion der Kamera realisiert. Am Ende des Programmes muss die Kameraaufnahme mit dem Befehl "`camera.stop\_recording"' beendet werden.
 
 \subsubsection{Triggererkennung}
+\label{subsubsec:triggererkennung}
 
 Durch das Empfangen und Verifizieren des Bluetooth-Signals wird eine Triggerdatei mit der Endung ".trg" im Ordner recording/trigger erzeugt. Dies ist genauer in \ref{sec:com} beschrieben.
 
