Added Webserver part

--- a/includes/evalsys/hardware.tex
+++ b/includes/evalsys/hardware.tex
@@ -25,7 +25,7 @@ Vorteile:
 \item Günstig
 \end{enumerate}
 
-Für einen Prototypen eines Systems ist in erster Linie die Funktionalität wichtig. Daher sind in diesem Fall die Nachteile zu vernachlässigen. In zukünftigen Projekten, sollte jedoch darauf geachtet werden, in welchen Einsatzgebieten eine Kamera gut arbeitet sowie, dass die Aufnahmedaten einfach verarbeitet werden können.\cite{picam_website} \\
+Für einen Prototypen eines Systems ist in erster Linie die Funktionalität wichtig. Daher sind in diesem Fall die Nachteile zu vernachlässigen. In zukünftigen Projekten, sollte jedoch darauf geachtet werden, in welchen Einsatzgebieten eine Kamera gut arbeitet sowie, dass die Aufnahmedaten einfach verarbeitet werden können.\cite{picam_webseite} \\
 
 Nicht nur bei der Kamera gibt es eine große Auswahl, sondern auch unter den geeigneten Kleinplatinenrechnern. Hier wird die Raspberry Pi Version 3 verwendet, denn diese verfügt über eine Bluetooth-Schnittstelle, welche für die Funktion des Gesamtsystems gegeben sein muss. Zudem ist bei diesem Model eine Kameraverbindungstelle auf dem Computerboard integriert. Die geschriebenen Programme sowie das Betriebssystem können auf einer Micro-SD-Karte abgespeichert werden.\cite{raspi_datenblatt}
 
